--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,19 +7,12 @@
 <form name="f" method="POST" action="/auth/login">
     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
     <label for="username">Введите имя пользователя: </label>
-    <input type="text" name="psername" id="username"/> <br/>
+    <input type="text" name="username" id="username"/> <br/>
     <label for="password">Введите пароль: </label> <input type="password" name="password" id="password"/> <br/>
     <input type="submit" value="Login" />
     <div th:if="${param.error}" style="color: red">
         Неправильные имя или пароль
     </div>
-
-    Still don't have any account? Then get one! CLICK BELOW
-    <td>
-        <form th:method="POST" th:action="@{auth/registration}">
-            <input type = "submit" value="Get registered"/>
-        </form>
-    </td>
 
 
 </form>
