--- a/src/main/resources/templates/all-users.html
+++ b/src/main/resources/templates/all-users.html
@@ -1,57 +1,245 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org" lang="EN">
+
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
-    <title>user table</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet">
+    <title>User list</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-<h1>ADMINISTRATOR PAGE</h1>
 
-<table class="table table-dark">
-    <thead>
-    <tr>
-        <th scope="col">names</th>
-        <th scope="col">countries</th>
-        <th scope="col">passwords</th>
-    </tr>
-    </thead>
+<nav class="navbar navbar-dark bg-dark">
+    <div class="container-fluid">
+        <span class="navbar-brand" th:text="${user.getName()} + ' with roles: ' + ${user.getStringRoles()}"></span>
+        <ul class="nav navbar-nav navbar-right">
+            <li class="nav-item">
+                <a class="nav-link" href="/logout">Logout</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col bg-white">
+            <br>
+            <ul class="nav nav-pills flex-column">
+                <li class="nav-item">
+                    <a href="/admin" class="nav-link active">Admin</a>
+                </li>
+                <li class="nav-item">
+                    <a href="/user" class="nav-link">User</a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-10 bg-light">
+            <div><br><h2>Admin panel</h2><br></div>
+            <ul class="nav nav-tabs">
+                <li class="nav-item">
+                    <a class="nav-link active" id="admin-tab" data-toggle="tab" href="#admin" role="tab"
+                       aria-controls="admin" aria-selected="true">User table</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="new-tab" data-toggle="tab" href="#new" role="tab"
+                       aria-controls="new" aria-selected="false">New User</a>
+                </li>
+            </ul>
+
+            <div class="tab-content">
+                <div class="tab-pane fade show active" id="admin" role="tabpanel" aria-labelledby="admin-tab">
+                    <div><h5 class="card-header">All users</h5></div>
+                    <table class="table table-striped">
+                        <thead>
+                        <tr>
+                            <th scope="col">id</th>
+                            <th scope="col">name</th>
+                            <th scope="col">country</th>
+                            <th scope="col">password</th>
+                            <th scope="col">role</th>
+                            <th scope="col">delete</th>
+                            <th scope="col">edit</th>
+                        </tr>
+                        </thead>
 
 
-    <tbody>
-    <tr th:each="user:${users}">
-        <td th:text="${user.name}"/>
-        <td th:text="${user.countryOfBirth}"/>
-        <td th:text="${user.password}"/>
+                        <tbody>
+                        <tr th:each="user : ${users}">
+                            <td th:text="${user.id}">Id</td>
+                            <td th:text="${user.username}">Username</td>
+                            <td th:text="${user.countryOfBirth}">Country</td>
+                            <td th:text="${user.password}">Password</td>
+                            <td th:text="${user.getStringRoles()}">Roles</td>
+                            <td>
+                                <button class="btn btn-info edit-btn"
+                                        data-toggle="modal"
+                                        th:data-target="${'#edit' + user.id}">Update
+                                </button>
+                            </td>
+                            <td>
+                                <button class="btn btn-danger"
+                                        data-toggle="modal"
+                                        th:data-target="${'#remove' + user.id}">Delete
+                                </button>
+                            </td>
 
+                            <div class="modal fade" th:id="${'edit' + user.id}" aria-hidden="true"
+                                 role="dialog" th:aria-labelledby="${'edit' + user.id}">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title">Edit user</h5>
+                                            <button type="button" class="close" data-dismiss="modal">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <div style="text-align: center;">
+                                                <div class="row justify-content-center align-items-center">
+                                                    <form class="text-center" th:action="@{/admin/save_user}"
+                                                          th:object="${user}"
+                                                          th:method="UPDATE" th:id="${'editor' + user.id}">
+                                                    <div class="form-group font-weight-bold">
+                                                            <label for="id">ID</label>
+                                                            <input type="number" class="form-control" id="id"
+                                                                   name="id" th:value="${user.getId()}" readonly>
+                                                            <br>
 
-        <td>
-            <form th:method="UPDATE" th:action="@{admin/delete_user/(id=${user.getId()})}">
-                <input type = "submit"  value="Delete"/>
-            </form>
-        </td>
-        <td>
-            <form th:method="UPDATE" th:action="@{admin/update_user/(id=${user.getId()})}">
-            <input type = "submit" value="Update"/>
-            </form>
-        </td>
-    </tr>
-    </tbody>
-</table>
+                                                            <label for="editName">Name</label>
+                                                            <input type="text" class="form-control"
+                                                               id="editName"
+                                                               name="name" th:value="${user.username}">
 
-<a href="/admin/new">Add new user</a>
+                                                            <label for="editCountryOfBirth">Country Of Birth</label>
+                                                            <input type="text" class="form-control" id="editCountryOfBirth"
+                                                                   name="countryOfBirth" th:value="${user.getCountryOfBirth()}">
+                                                            <label for="editPassword">Password</label>
+                                                            <input type="password" class="form-control"
+                                                                   id="editPassword"
+                                                                   name="password" th:value="${user.getPassword()}">
+                                                            <br>
+                                                            <label for="editRole">Role</label>
+                                                            <select class="form-select w-100" size="2" id="editRole"
+                                                                    multiple name="checkBoxRoles">
+                                                                <option th:each="role : ${roles}"
+                                                                        th:text="${role.getName()}" selected></option>
+                                                            </select>
+                                                        </div>
+                                                    </form>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary"
+                                                    data-dismiss="modal">Close
+                                            </button>
+                                            <input type="submit" th:form="${'editor' + user.id}" class="btn btn-info col-2" value="Edit"/>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
 
+                            <div class="modal fade" th:id="${'remove' + user.id}" aria-hidden="true"
+                                 role="dialog" th:aria-labelledby="${'remove' + user.id}">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title">Remove user</h5>
+                                            <button type="button" class="close" data-dismiss="modal">
+                                                &times;
+                                            </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <div style="text-align: center;">
+                                                <div class="row justify-content-center align-items-center">
+                                                    <form class="text-center" th:action="@{admin/delete_user/(id=${user.getId()})}"
+                                                          th:object="${user}" method="POST"
+                                                          th:id="${'deleter' + user.id}">
+                                                        <div class="form-group font-weight-bold">
+                                                            <label for="delId">ID</label>
+                                                            <input type="number" class="form-control" id="delId"
+                                                                   name="id" th:value="${user.id}" readonly>
+                                                            <br>
+                                                            <label for="delName">Username</label>
+                                                            <input type="text" class="form-control" id="delName"
+                                                                   name="username" th:value="${user.getName()}" readonly>
+                                                            <br>
+                                                            <label for="delCountryOfBirth">Country of Birth</label>
+                                                            <input type="text" class="form-control" id="delCountryOfBirth"
+                                                                   name="countryOfBirth" th:value="${user.getCountryOfBirth()}" readonly>
 
-    <form th:method= "GET" th:action="@{/user}">
-        <input type = "submit"  value="View details about user"/>
-    </form>
+                                                            <label for="delPassword">Password</label>
+                                                            <input type="password" class="form-control"
+                                                                   id="delPassword"
+                                                                   name="password" th:value="${user.getPassword()}" readonly>
+                                                            <br>
+                                                            <label for="delRole">Role</label>
+                                                            <select class="form-select w-100" size="2" id="delRole"
+                                                                    name="checkBoxRoles" readonly>
+                                                                <option th:each="role : ${roles}"
+                                                                        th:text="${role.getName()}" disabled></option>
+                                                            </select>
+                                                        </div>
+                                                    </form>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary"
+                                                    data-dismiss="modal">Close
+                                            </button>
+                                            <input type="submit" th:form="${'deleter' + user.id}" class="btn btn-danger" value="Delete"/>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
 
+                <div class="tab-pane fade" id="new" role="tabpanel" aria-labelledby="new-tab">
+                    <h5 class="card-header">Add user</h5>
+                    <div class="row justify-content-center align-items-center">
+                        <form class="text-center" th:action="@{/admin/save_user}" th:object="${user}" method="post">
+                            <div class="form-group font-weight-bold">
 
-<form th:method="POST" th:action="@{/logout}">
-    <input type = "submit"  value="logout"/>
-</form>
+                                <label for="name">name</label>
+                                <input type="text" class="form-control" id="name" name="name"
+                                       placeholder="name">
+                                <br>
 
+                                <label for="countryOfBirth">Country Of Birth</label>
+                                <input type="text" class="form-control" id="countryOfBirth" name="countryOfBirth" placeholder="countryOfBirth">
+                                <br>
+
+                                <label for="password">Password</label>
+                                <input type="password" class="form-control" id="password" name="password"
+                                       placeholder="Password">
+                                <br>
+
+                                <label for="role">Role</label>
+                                <select class="form-select w-100" size="2" id="role" multiple name="checkBoxRoles">
+                                    <option th:each="role : ${roles}"
+                                            th:text="${role.getName()}" selected></option>
+                                </select>
+
+                                <button type="submit" class="btn btn-success">Add new user</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+        crossorigin="anonymous"></script>
 </body>
 </html>
 
